[package]
name = "blitzmd"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast URL to Markdown converter"
license = "MIT"
keywords = ["markdown", "html", "converter", "cli", "web"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["gzip", "brotli", "stream"] }
tokio = { version = "1", features = ["full"] }
lol_html = "1.2"
anyhow = "1.0"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
