[package]
name = "blitzmd"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast URL to Markdown converter"
license = "MIT"
keywords = ["markdown", "html", "converter", "cli", "web"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
lol_html = "1.2"
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
scraper = "0.24"
url = "2.5"
urlencoding = "2.1"

# Windows: SChannel via native-tls (no extra deps)
[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["gzip", "brotli", "stream", "native-tls"] }

# Linux/macOS: rustls (pure Rust, no OpenSSL needed — works with musl)
[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["gzip", "brotli", "stream", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
